--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.3"
+    "autoprefixer": "^10.4.12",
+    "nanoid": "^4.0.0",
+    "postcss": "^8.4.16",
+    "sass": "^1.55.0",
+    "vite": "^3.2.3",
+    "vite-plugin-svgr": "^2.2.1"
   }
 }
